# wallpaper

./: .gitignore  README.md  pyproject.toml
src/wallpaper/: __init__.py  cli.py  render.py
