[project]
name = "wallpaper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lucien Brule", email = "lucien@lucienbrule.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cairosvg>=2.7.1",
    "click>=8.1.8",
]

[project.scripts]
wallpaper = "wallpaper:cli  "

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
